--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,7 +18,7 @@
   "eat-Ldd": "吃掉鲁大叼",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "鲁大叼音游",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
